--- a/pages/result/result.wxss
+++ b/pages/result/result.wxss
@@ -1,4 +1,6 @@
 /* pages/result/result.wxss */
+@import "/pages/book-item/book-item.wxss";
+
 .order-container{
   display: flex;
   flex-direction: row;
