--- a/pages/book-item/book-item.wxml
+++ b/pages/book-item/book-item.wxml
@@ -1,18 +1,26 @@
 <template name="book-item-template">
   <view class="main_view">
-  <view class="book-image">
-    <image src="{{image_path}}"></image>  
-  </view>
+    <view class="book-image">
+      <image src="{{image_path}}"></image>
+    </view>
     <view class="all-info-container">
       <view class="title-container">
         <text>{{title}}</text>
         <image class="collect-img" src="/images/icons/star.png"></image>
       </view>
       <view class="detail-container">
-        <view class="book-info">
-          <text >{{main_info}}</text>
+        <view class="book-info" bindtap='onMoreInfo' id="{{idx}}">
+          <text>作者：{{author}}</text>
+          <text>出版社：{{publisher}}</text>
+          <text>出版年：{{publish_date}}</text>
+          <view class='tags-view'>
+            <block wx:for="{{tagsArray}}" wx:for-item="item" wx:for-index="idx">
+              <text class="tag-item" wx:if="{{idx<3}}">{{item}}</text>
+            </block>
+            <text class="more-text" wx:if="{{tagsArray.length>3}}">更多...</text>
+          </view>
         </view>
-        
+
         <view class="book-score">
           <view class='score-total-container'>
             <view class='score-total-text'>
@@ -26,14 +34,14 @@
                   <image wx:else src="/images/icons/none-star.png"></image>
                 </block>
               </view>
-              <text>{{rating_people}}人评分</text>
+              <text>{{rating_people}}评分</text>
             </view>
           </view>
           <view class="score-detail-container">
             <block wx:for="{{score_array}}" wx:for-item="i" wx:for-index="idx">
               <view class="score-row">
                 <text class="star-order">{{5-idx}}星</text>
-                <image src="/images/icons/band.png" style="height:6px;width:{{i/1.15}}px"></image>
+                <image src="/images/icons/band.png" style="height:6px;width:{{i/1.3}}px"></image>
                 <text>{{i}}%</text>
               </view>
 
