--- a/pages/book-item/book-item.wxss
+++ b/pages/book-item/book-item.wxss
@@ -54,38 +54,59 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-right: 10rpx;
 }
 
 .book-info {
   margin-right: 5rpx;
   margin-top:10rpx;
   display: flex;
+  flex-direction: column;
 }
-.book-info text{
-  width:235rpx;
-  line-height: 25rpx;
+
+.tags-view {
+  display: flex;
+  flex-wrap: wrap;
+  text-overflow: ellipsis;
+  word-break: break-all;
+}
+.tag-item {
+  margin: 5rpx 5rpx;
+  width: fit-content;
+  line-height: 30rpx;
+  display: flex;
+  border-radius: 15rpx;
+  background-color: #ededed;
+  padding-left: 15rpx;
+  padding-right: 15rpx;
+}
+
+.tags-view .more-text {
+  margin: 5rpx 5rpx;
+  line-height: 30rpx;
 }
 
 .book-score{
-  margin-right: 10rpx;
-  background-color:#ededed;
+border-left: 1rpx solid #999;
+padding-left: 5rpx;
 }
+
 
 .score-total-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin-right: 10rpx;
+  width: 250rpx;
 }
 
 .score-total-text text{
-  font-size: 30rpx;
+  font-size: 27rpx;
   line-height: 50rpx;
 }
 .stars-container {
   display: flex;
   flex-direction: column;
   height: 50rpx;
+  margin-left: 10rpx;
 }
 
 
@@ -99,8 +120,8 @@
 
 .stars image {
   padding-left: 3rpx;
-  height: 17rpx;
-  width: 17rpx;
+  height: 15rpx;
+  width: 15rpx;
 }
 
 .score-detail-container {
@@ -118,7 +139,7 @@
 }
 .score-row image {
   vertical-align: middle;
-  margin-top: 4rpx;
-  margin-right: 15rpx;
-  margin-left: 15rpx;
+  margin-top: 6rpx;
+  margin-right: 7rpx;
+  margin-left: 7rpx;
 }
