--- a/pages/result/result.wxml
+++ b/pages/result/result.wxml
@@ -1,5 +1,5 @@
 <!--pages/result/result.wxml-->
-<import src="/pages/book-item/book-item.wxml"/>
+<import src="/pages/book-item/book-item.wxml" />
 
 <view class="order-container">
   <text>排序依据:</text>
@@ -15,7 +15,16 @@
   <text>> {{orderArray[orderIndexArray[3]]}}</text>
 </view>
 <view>
-<block wx:for="{{postData}}" wx:for-index="idx">
-<template is="book-item-template" data="{{...postData[idx]}}"/>
-</block>
+  <block wx:for="{{postData}}" wx:for-index="idx">
+    <template is="book-item-template" data="{{...postData[idx]}}" id="{{idx}}" />
+  </block>
+  <view wx:if="{{showMoreInfo}}" class="more-info-view" catchtap='onCloseMoreInfo'>
+    <view class="info-text">
+      <text>{{postData[moreInfoIndex].info}}</text>
+      <view>
+        <text>标签：</text>
+        <text class="tags-array">{{postData[moreInfoIndex].tags}}</text>
+      </view>
+    </view>
+  </view>
 </view>
