--- a/pages/result/result.wxss
+++ b/pages/result/result.wxss
@@ -19,3 +19,20 @@
   line-height: 50rpx;
   font-size: 25rpx;
 }
+
+.more-info-view {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0.95;
+  overflow: hidden;
+  z-index: 9000;
+  background-color: #f2f2f2;
+
+}
+
+.more-info-view .info-text{
+  margin: 60rpx 30rpx auto 30rpx;
+}
