--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -84,7 +84,7 @@
   </view>
 
   <view>
-    <button class="search-button">
+    <button class="search-button" bindtap='onSearch'>
       开始搜索
     </button>
   </view>
