--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -18,21 +18,17 @@
 
   <view class='advance-view'>
 
-
     <view class="adv-item">
-      <text class="adv-label">搜索范围：</text>
+      <text class="adv-label">搜索范围:</text>
       <view class="adv-range-content" wx:for="{{searchRange}}" wx:for-item="item" wx:for-index="idx">
         <view class="adv-range-tag-view" bindtap="onTapTags" id="{{idx}}">
           <template is="check-button" data="{{...item}}" />
         </view>
       </view>
     </view>
-
-
-
-
+<!--
     <view class='adv-item'>
-      <text class="adv-label">评分：</text>
+      <text class="adv-label">评分:</text>
       <view class="adv-rating-input-view">
         <picker mode="multiSelector" value="{{scoreIndexArray[0]}}" range="{{scoreArray}}" id="0" bindchange="bindScoreChange">
           <view class="picker">
@@ -47,21 +43,16 @@
         </picker>
       </view>
     </view>
-
-
-    <!-- 日期 -->
-
+    
     <view class='adv-item'>
-      <text class="adv-label">日期：</text>
+      <text class="adv-label">日期:</text>
       <view class="adv-date-picker-view">
         <picker mode='date' value="{{dateArray}}" start="1900-01" end="2020-01" fields="year" id="0" bindchange="bindDateChange">
           <view class="picker">
             {{dateArray[0]}}
           </view>
         </picker>
-
         <text>~</text>
-
         <picker mode='date' value="{{dateTo}}" start="1900-01" end="2020-01" fields="year" id="1" bindchange="bindDateChange">
           <view class="picker">
             {{dateArray[1]}}
@@ -71,15 +62,29 @@
     </view>
 
     <view class='adv-item'>
-      <text class="adv-label">评价人数：</text>
+      <text class="adv-label">评价人数:</text>
       <view class="adv-people-input-view">
         <input placeholder="最少人数" value="{{peopleArray[0]}}" placeholder-class="placeholder" maxlength="9" id="0" type="number">
         </input>
-        <text>~</text>
+        <text class='split-label'>~</text>
         <input placeholder="最多人数" value="{{peopleArray[1]}}" placeholder-class="placeholder" maxlength="9" id="1" type="number">
         </input>
       </view>
     </view>
+    -->
+
+    <block wx:for='{{adv_item_content}}' wx:for-item='item' wx:for-index='idx'>
+      <view class='adv-item'>
+        <text class='adv-label'>{{item.title}}</text>
+        <view class="adv-people-input-view">
+          <input placeholder="最少人数" value="{{item.floor}}" placeholder-class="placeholder" maxlength="9" id="0" type="number" id='{{2*idx}}' bindinput='bindKeyInput'>
+          </input>
+          <text class='split-label'>~</text>
+          <input placeholder="最多人数" value="{{item.ceil}}" placeholder-class="placeholder" maxlength="9" id="1" type="number" id='{{2*idx+1}}' bindinput='bindKeyInput'>
+          </input>
+        </view>
+      </view>
+    </block>
 
   </view>
 
