--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -3,15 +3,10 @@
 
 <view class='whole-container'>
 
-  <view class='switch-view'>
-    <text>搜索设置</text>
-    <switch checked bindchange="switch1Change" />
-  </view>
-
   <view class='search-view'>
     <view class="search-container">
       <icon type='search' class='search-img' size='20' color='$405f80'></icon>
-      <input placeholder="请输入要查询的书籍" placeholder-class='placeholder' />
+      <input placeholder="请输入要查询的书籍" placeholder-class='placeholder' bindinput='bindSearchInput'/>
       <image src="/images/icons/xx.png" class='xx-img'></image>
     </view>
   </view>
@@ -31,10 +26,10 @@
       <view class='adv-item' wx:if='{{item.state}}' >
         <text class='adv-title' bindtap='onChangeItemState' id="{{idx}}">{{item.title}}</text>
         <view class="adv-input-view">
-          <input placeholder="最少人数" value="{{item.floor}}" placeholder-class="placeholder" maxlength="9" type="number" id='{{2*idx}}' bindinput='bindKeyInput'>
+          <input placeholder="{{item.inputHolder[0]}}" value="{{item.input[0]}}" placeholder-class="placeholder" maxlength="{{item.maxLength}}" type="{{item.type}}" id='{{2*idx}}' bindinput='bindAdvInput'>
           </input>
           <text class='split-label'>~</text>
-          <input placeholder="最多人数" value="{{item.ceil}}" placeholder-class="placeholder" maxlength="9" type="number" id='{{2*idx+1}}' bindinput='bindKeyInput'>
+          <input placeholder="{{item.inputHolder[1]}}" value="{{item.input[1]}}" placeholder-class="placeholder" maxlength="{{maxLength}}" type="{{item.type}}" id='{{2*idx+1}}' bindinput='bindAdvInput'>
           </input>
         </view>
       </view>
